cmake_minimum_required(VERSION 3.0)
project(ActiveMQ-CPP)
include(flags OPTIONAL)
option(FIND_APR_MODULE_PATH "Find APR in CMAKE_MODULE_PATH" OFF)
if(FIND_APR_MODULE_PATH)
  find_package(usexp-APR REQUIRED PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
else()
  find_package(APR REQUIRED)
endif()
add_subdirectory(activemq-cpp/src/main)
