cmake_minimum_required(VERSION 3.0)
project(activemq-cpp)
include(flags OPTIONAL)
option(FIND_APR_MODULE_PATH "Find APR in CMAKE_MODULE_PATH" OFF)
option(FIND_OPENSSL_MODULE_PATH "Find OpenSSL in CMAKE_MODULE_PATH" OFF)
mark_as_advanced(FIND_APR_MODULE_PATH)
mark_as_advanced(FIND_OPENSSL_MODULE_PATH)
if(FIND_APR_MODULE_PATH)
  find_package(usexp-APR REQUIRED PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
else()
  find_package(APR REQUIRED)
endif()
if(FIND_OPENSSL_MODULE_PATH)
  find_package(usexp-OpenSSL REQUIRED PATHS ${CMAKE_MODULE_PATH} NO_DEFAULT_PATH)
else()
  find_package(OpenSSL)
endif()
if(UNIX)
  include(configure.cmake)
endif()
include(CheckCXXCompilerFlag)
check_cxx_compiler_flag("-Wno-deprecated-declarations" has_noDeprecatedDeclarations)
if(has_noDeprecatedDeclarations)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
endif()
add_subdirectory(src/main)
add_subdirectory(src/examples)
