cmake_minimum_required(VERSION 3.0)
project(activemq-cpp)
include(flags OPTIONAL)
include(GNUInstallDirs)
if(COMMAND xpFindPkg)
  xpFindPkg(PKGS apr openssl)
else()
  find_package(APR REQUIRED)
  find_package(OpenSSL)
endif()
if(UNIX)
  include(configure.cmake)
endif()
include(CheckCXXCompilerFlag)
check_cxx_compiler_flag("-Wno-deprecated-declarations" has_noDeprecatedDeclarations)
if(has_noDeprecatedDeclarations)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
endif()
add_subdirectory(src/main)
add_subdirectory(src/examples)
